--- a/src/Styles/Dogo.css
+++ b/src/Styles/Dogo.css
@@ -19,7 +19,6 @@
   .dogoCard:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     background-color: rgb(73, 79, 82);
-
     transform: scale(1.05);
     transition: 0.5s;
   }
@@ -34,4 +33,6 @@
     height: 250px;
     width: 250px;
     object-fit: scale-down;
+    background-repeat: no-repeat;
+    background-size: 250px;
   }
