--- a/src/styles/Dog.css
+++ b/src/styles/Dog.css
@@ -1,35 +1,35 @@
-.dogoCard {
+.dogCard {
     border-radius: 5px;
     overflow: hidden;
     margin: 8px;
     width: 250px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    transition: transform 0.3s, opacity 0s 1s;
     background-color: rgb(100, 107, 110);
     color: white;
   }
 
-  .dogoCardContainer {
+  .dogCardContainer {
     max-width: 1066px;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
   }
   
-  .dogoCard:hover {
+  .dogCard:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     background-color: rgb(73, 79, 82);
     transform: scale(1.05);
     transition: 0.5s;
   }
 
-  .dogoCardText {
+  .dogCardText {
     padding: 4px;
     padding-top: 12px;
     vertical-align: bottom;
   }
 
-  .dogoImage {
+  .dogImage {
     height: 250px;
     width: 250px;
     object-fit: scale-down;
@@ -37,7 +37,7 @@
     background-size: 250px;
   }
 
-  .dogoDeleteButton {
+  .dogDeleteButton {
     display: inline-block;
     color: red;
     position: relative;
@@ -52,7 +52,7 @@
     box-shadow: 1px 2px 3px rgba(0,0,0,.5);
   }
 
-  .dogoEditButton {
+  .dogEditButton {
     display: inline-block;
     color: black;
     position: relative;
@@ -67,11 +67,11 @@
     box-shadow: 1px 2px 3px rgba(0,0,0,.5);
   }
 
-  .dogoDeleteButton:hover, .dogoEditButton:hover {
+  .dogDeleteButton:hover, .dogEditButton:hover {
     opacity: 0.7;
   }
 
-  .dogoAddButton {
+  .dogAddButton {
     display: inline-block;
     color: white;
     position: relative;
