--- a/src/styles/Dog.css
+++ b/src/styles/Dog.css
@@ -29,6 +29,12 @@
     vertical-align: bottom;
   }
 
+  .dogCardText > div {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   .dogImage {
     height: 250px;
     width: 250px;
@@ -37,15 +43,15 @@
     background-size: 250px;
   }
 
-  .dogDeleteButton {
+  .dogDeleteButton, .dogEditButton, .dogDeleteCheckBox {
     display: inline-block;
     color: red;
     position: relative;
     transform: scale(2);
     background-color: white;
     top: -235px;
-    left: 100px;
-    opacity: 0.4;
+    left: 90px;
+    opacity: 0.5;
     cursor: pointer;
     -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
     -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
@@ -53,21 +59,20 @@
   }
 
   .dogEditButton {
-    display: inline-block;
     color: black;
-    position: relative;
-    transform: scale(2);
-    background-color: white;
-    top: -235px;
-    left: 80px;
-    opacity: 0.4;
-    cursor: pointer;
-    -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+    left: 70px;
   }
 
-  .dogDeleteButton:hover, .dogEditButton:hover {
+  .dogDeleteCheckBox {
+    color: black;
+    left: -90px;
+    background-color: white;
+    -moz-box-shadow: '';
+    -webkit-box-shadow: '';
+    box-shadow: '';
+  }
+
+  .dogDeleteButton:hover, .dogEditButton:hover, .dogDeleteCheckBox:hover {
     opacity: 0.7;
   }
 
