restructured files and folders

--- a/src/styles/Dogs.css
+++ b/src/styles/Dogs.css
@@ -14,3 +14,9 @@
 .deleteDogsButton:hover {
   opacity: 0.8;
 }
+
+.progressbar {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 50%;
+}
