added progress bar to top

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,4 +1,4 @@
-.nav-container{
+.header-container{
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -7,7 +7,7 @@
   color: white;
 }
 
-.nav-links{
+.header-links{
   width: 50%;
   display: flex;
   justify-content: space-around;
@@ -16,50 +16,24 @@
   color: white;
 }
 
-.nav-links:hover{
+.header-links:hover{
   color: white;
 }
 
-.drawer-links{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  list-style: none;
-  color: #818181;
+.progressbar {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
 }
 
-.sidenav {
-  height: 100%;
-  width: 250px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #353535;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+.progressbar-container {
+  background: rgb(73, 79, 82);
 }
 
-.sidenav > a, .sidenav > span {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  text-align: left;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+.progressbar::-webkit-progress-bar{
+  background-color: rgb(73, 79, 82);
 }
 
-.sidenav > a:hover, .sidenav > span:hover {
-  color: #f1f1f1;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-  cursor: pointer;
+.progressbar::-webkit-progress-value{
+  background-color: red;
 }
