--- a/src/styles/Dogs.css
+++ b/src/styles/Dogs.css
@@ -11,6 +11,7 @@
   background-color: red;
   color: white;
   padding: 14px 20px;
+  margin-right: 10px;
   border: none;
   cursor: pointer;
   width: 50;
