implemented pause, resume, cancel buttons for custom upload

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -22,10 +22,12 @@
 
 .pauseUploadButton {
   color: white;
+  cursor: pointer;
 }
 
 .cancelUploadButton {
-  color: white;
+  color: red;
+  cursor: pointer;
 }
 
 .progressbar {
