--- a/src/styles/ModalEdit.css
+++ b/src/styles/ModalEdit.css
@@ -65,7 +65,7 @@
   top: 0;
   width: 100%; /* Full width */
   height: 100%; /* Full height */
-  overflow: hidden; /* Enable scroll if needed */
+  /*overflow: hidden; /* Enable scroll if needed */
   background-color: rgba(71, 78, 93, 0.9);
   padding-top: 50px;
 }
