--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -34,20 +34,6 @@
   transform: scale(1.3);
 }
 
-.progressbar {
-  -webkit-appearance: none;
-  appearance: none;
-  flex-basis: 95%;
-  margin-top: 7px;
-}
-
-.progressbar2 {
-  -webkit-appearance: none;
-  appearance: none;
-  flex-basis: 95%;
-  margin-top: 7px;
-}
-
 .progressbar-container {
   display: flex;
   justify-content: center;
@@ -55,19 +41,42 @@
   background: rgb(73, 79, 82);
 }
 
+.progressbar {
+  -webkit-appearance: none;
+  appearance: none;
+  flex-basis: 95%;
+  margin-top: 7px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+}
+
+.progressbar2 {
+  -webkit-appearance: none;
+  appearance: none;
+  flex-basis: 95%;
+  margin-top: 7px;
+  border-radius: 20px;
+}
+
 .progressbar::-webkit-progress-bar{
   background-color: rgb(73, 79, 82);
+  border-radius: 20px;
 }
 
 .progressbar2::-webkit-progress-bar{
   background-color: rgb(73, 79, 82);
+  border-radius: 20px;
 }
 
 .progressbar::-webkit-progress-value{
   transition: width 0.5s; 
   background-color: green;
+  border-color: white;
+  border-radius: 20px;
 }
 
 .progressbar2::-webkit-progress-value{ 
   background-color: rgb(73, 79, 82);
+  border-color: white;
+  border-radius: 20px;
 }
